--- a/package.json
+++ b/package.json
@@ -7,22 +7,31 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "better-sqlite3": "^11.10.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "supertest": "^6.3.3",
     "tailwindcss": "^4.1.7",
     "ts-jest": "^29.3.4"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7"
+    "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0"
   }
 }
